prevent zoom and overscroll on ios

--- a/sass/_jquery-ui.scss
+++ b/sass/_jquery-ui.scss
@@ -692,6 +692,7 @@ td.ui-datepicker-highlight {
     position: absolute;
     top: 2px;
     right: 0;
+    cursor: pointer;
 
     &:hover {
       background-color: initial;
