--- a/sass/layouts/_about-us.scss
+++ b/sass/layouts/_about-us.scss
@@ -21,7 +21,7 @@
 }
 
 .parallax__layer--back {
-  transform: translateZ(-.5px) scale(1.5);
+  transform: translateZ(-0.5px) scale(1.5);
 }
 
 .parallax__layer--deep {
@@ -39,21 +39,19 @@
   overflow: hidden;
 }
 
-
 .about-us {
-  
-  &__button{
+  &__button {
     font-size: 1.375rem;
     border-radius: 35px;
     padding-left: 50px;
     padding-right: 50px;
   }
 
-  h2{
+  h2 {
     font-size: 3rem;
   }
 
-  p{
+  p {
     font-size: 1.5rem;
   }
 
@@ -66,7 +64,7 @@
     z-index: 0;
     overflow: hidden;
     top: -30%;
-  
+
     .backdrop-bg {
       background-color: $white;
       position: absolute;
@@ -75,7 +73,7 @@
       width: 100%;
       height: 100%;
     }
-  
+
     .backdrop {
       background-color: rgba(16, 27, 81, 0.2);
       position: absolute;
@@ -84,14 +82,28 @@
       width: 100%;
       height: 100%;
     }
-  
-    @mixin animation-mixin($name, $fromX, $toX, $fromY, $toY, $opacityFrom, $opacityTo) {
-      @keyframes #{$name} {
-        0% {transform: translate($fromX + px, $fromY + px) scale(1); opacity: $opacityFrom;}
-        100% {transform: translate($toX + px, $toY + px) scale(1.2); opacity: $opacityTo;}
-      }
+
+    @mixin animation-mixin(
+      $name,
+      $fromX,
+      $toX,
+      $fromY,
+      $toY,
+      $opacityFrom,
+      $opacityTo
+    ) {
+      // @keyframes #{$name} {
+      //   0% {
+      //     transform: translate($fromX + px, $fromY + px) scale(1);
+      //     opacity: $opacityFrom;
+      //   }
+      //   100% {
+      //     transform: translate($toX + px, $toY + px) scale(1.2);
+      //     opacity: $opacityTo;
+      //   }
+      // }
     }
-  
+
     .circle {
       border-radius: 50%;
       position: absolute;
@@ -99,15 +111,15 @@
       // @supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
       //   filter: none;
       // }
-  
+
       &--1 {
         width: 1380px;
         height: 1380px;
         top: -100%;
         left: -35%;
-        background-color: #F0F0F0;
+        background-color: #f0f0f0;
       }
-  
+
       &--2 {
         width: 375px;
         height: 375px;
@@ -115,17 +127,17 @@
         right: -10%;
         background-color: $orange;
       }
-  
+
       &--3 {
-        background-color: #CC14AA;
+        background-color: #cc14aa;
         width: 300px;
         height: 300px;
-        left: 50%;
+        left: 45%;
         bottom: 0;
-        opacity: 0.1;
+        opacity: 0.2;
         transform: translateX(-50%);
       }
-  
+
       &--static {
         background-color: $orange;
         opacity: 0.1;
@@ -136,46 +148,68 @@
         transform: translate(-50%, -50%);
         filter: none;
       }
-  
+
       &--4 {
-        background-color: #7FD6DA;
-        opacity: .2;
+        background-color: #7fd6da;
+        opacity: 0.2;
         width: 604px;
         height: 604px;
-        left: -20%;
-        bottom: -60%;
+        left: -15%;
+        bottom: -50%;
       }
-  
+
       &--5 {
         background-color: $white;
-        opacity: .1;
+        opacity: 0.2;
         width: 802px;
         height: 802px;
         left: 20%;
         top: -10%;
       }
-  
+
       &--6 {
         background-color: $orange;
-        opacity: .1;
+        opacity: 0.2;
         width: 1257px;
         height: 1257px;
         top: 0;
         right: -50%;
       }
-  
+
       @for $i from 1 through 6 {
         @if $i == 3 {
-          @include animation-mixin(circle-#{$i}, random(50), random(100) - 150, random(50), random(100) + 50, random(50)/100 + 0.2, random(50)/100 + 0.5);
+          @include animation-mixin(
+            circle-#{$i},
+            random(50),
+            random(100) - 150,
+            random(50),
+            random(100) + 50,
+            random(50) / 100 + 0.2,
+            random(50) / 100 + 0.5
+          );
         } @else {
-          @include animation-mixin(circle-#{$i}, random(50), random(100) - 50, random(50), random(100) + 50, random(50)/100 + 0.3, random(50)/100 + 0.5);
+          @include animation-mixin(
+            circle-#{$i},
+            random(50),
+            random(100) - 50,
+            random(50),
+            random(100) + 50,
+            random(50) / 100 + 0.3,
+            random(50) / 100 + 0.5
+          );
         }
         &--#{$i} {
-          animation: circle-#{$i} #{random(12)/2 + 4}s ease-in-out infinite alternate;
+          animation: circle-#{$i}
+            #{random(12) /
+            2 +
+            4}s
+            ease-in-out
+            infinite
+            alternate;
         }
       }
     }
-  
+
     .overlay {
       background-color: rgba(255, 255, 255, 0.5);
       // @supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
@@ -190,8 +224,6 @@
   }
 }
 
-
-
 // .parallax {
 //   position: relative;
 //   height: 750px;
@@ -205,7 +237,7 @@
   $_photo-width-1440: 800px;
 
   height: 750px;
-  padding:  0;
+  padding: 0;
   position: relative;
   display: flex;
   z-index: 2;
@@ -240,24 +272,24 @@
       padding: 50px 0 0 0;
     }
 
-    h1{
+    h1 {
       font-size: 4.5rem;
       margin-top: 0px;
       margin-bottom: 37px;
       font-weight: 800;
     }
 
-    h3{
-      font-family: 'Roboto', sans-serif;
+    h3 {
+      font-family: "Roboto", sans-serif;
       font-size: 1.75rem;
       color: $orange;
     }
-    p{
+    p {
       font-size: 1.5rem;
       margin-bottom: 0px;
     }
-   ul{
-      li{
+    ul {
+      li {
         font-weight: 700;
         font-size: 1.5rem;
       }
@@ -284,7 +316,8 @@
     // bottom: 0;
     // width: 60%;
     left: auto;
-    
+    right: -155px;
+
     @include breakpoint(1440px) {
       min-width: $_photo-width-1440;
       width: $_photo-width-1440;
@@ -309,8 +342,10 @@
   overflow: hidden;
   z-index: 20;
 
-  .backdrop {
-    background-color: $white;
+  .background {
+    .backdrop {
+      background-color: $white;
+    }
   }
 
   .background {
@@ -337,6 +372,8 @@
     // height: 750px;
     // top: auto;
     // z-index: 10;
+    // transform: translateZ(-);
+    top: 0;
   }
 
   &__content {
@@ -372,7 +409,7 @@
     }
 
     &--timetable {
-      border-left-color: #E589D4;
+      border-left-color: #e589d4;
     }
 
     &--tools {
@@ -380,13 +417,13 @@
     }
 
     &--reputation {
-      border-left-color: #E5CDBF;
+      border-left-color: #e5cdbf;
     }
   }
 
   &__icon {
     height: 55px;
-    
+
     &--main {
       height: 120px;
     }
